Fix nav misalignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -52,7 +52,6 @@ nav ul li {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-top: 5px;
     direction: ltr;
     gap: 3px;
 }
